add remove video/

--- a/index.html
+++ b/index.html
@@ -15,31 +15,31 @@
             <div class="grid-container">
         <div class="introduktion">
             <h2 class="introduktion__header">INTRODUCTION</h2>
-            <iframe src="videos/introduktion.mp4" frameborder="0"></iframe>
+            <iframe src="introduktion.mp4" frameborder="0"></iframe>
         </div>
         <div class="configure">
             <h2 class="configure__header">CONFIGURE</h2>
-            <iframe src="videos/config.mp4" frameborder="0"></iframe>
+            <iframe src="config.mp4" frameborder="0"></iframe>
         </div>
         <div class="rules">
             <h2 class="rules__header">RULES</h2>
-            <iframe src="videos/rules.mp4" frameborder="0"></iframe>
+            <iframe src="rules.mp4" frameborder="0"></iframe>
         </div>
         <div class="scss">
             <h2 class="scss__header">SCSS</h2>
-            <iframe src="videos/scss.mp4" frameborder="0"></iframe>
+            <iframe src="scss.mp4" frameborder="0"></iframe>
         </div>
         <div class="html">
             <h2 class="html__header">HTML</h2>
-            <iframe src="videos/html.mp4" frameborder="0"></iframe>
+            <iframe src="html.mp4" frameborder="0"></iframe>
         </div>
         <div class="postcss">
             <h2 class="postcss__header">POSTCSS</h2>
-            <iframe src="videos/postcss.mp4" frameborder="0"></iframe>
+            <iframe src="postcss.mp4" frameborder="0"></iframe>
         </div>
         <div class="output-build">
 <h2 class="output-build__header">OUTPUT+BUILD</h2>
-<iframe src="videos/outputandbuild.mp4" frameborder="0"></iframe>
+<iframe src="outputandbuild.mp4" frameborder="0"></iframe>
         </div>
     </div>
     </section>
