--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <div class="grid-container">
         <div class="introduktion">
             <h2 class="introduktion__header">INTRODUCTION</h2>
-            <iframe src="introduktion.mp4" frameborder="0"></iframe>
+            <iframe src="intro.mp4" frameborder="0"></iframe>
         </div>
         <div class="configure">
             <h2 class="configure__header">CONFIGURE</h2>
@@ -39,7 +39,7 @@
         </div>
         <div class="output-build">
 <h2 class="output-build__header">OUTPUT+BUILD</h2>
-<iframe src="outputandbuild.mp4" frameborder="0"></iframe>
+<iframe src="output+build.mp4" frameborder="0"></iframe>
         </div>
     </div>
     </section>
